@@ -17,7 +17,7 @@
 
     <properties>
         <java.version>9</java.version>
-        <kotlin.version>1.2.0</kotlin.version>
+        <kotlin.version>1.2.10</kotlin.version>
     </properties>
 
     <dependencies>
@@ -84,12 +84,6 @@
         </dependency>
 
         <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.3.0</version>
-        </dependency>
-
-        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
@@ -111,8 +105,8 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <plugin>
-                <artifactId>kotlin-maven-plugin</artifactId>
                 <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
                 <version>${kotlin.version}</version>
                 <configuration>
                     <jvmTarget>1.8</jvmTarget>
@@ -120,18 +114,13 @@
                         <plugin>spring</plugin>
                     </compilerPlugins>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>compile</id>
-                        <phase>process-sources</phase>
-                        <goals><goal>compile</goal></goals>
-                    </execution>
-                    <execution>
-                        <id>test-compile</id>
-                        <phase>process-test-sources</phase>
-                        <goals><goal>test-compile</goal></goals>
-                    </execution>
-                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.jetbrains.kotlin</groupId>
+                        <artifactId>kotlin-maven-allopen</artifactId>
+                        <version>${kotlin.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
@@ -145,7 +134,6 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
                             <verbose>true</verbose>
@@ -156,10 +144,26 @@
                             <compilerArgs>
                                 <arg>-verbose</arg>
                                 <arg>-Xlint:unchecked</arg>
-                                <arg>-J--illegal-access=permit</arg>
-                                <arg>--add-modules</arg>
-                                <arg>java.xml.bind</arg>
+                                <arg>--add-modules java.xml.bind</arg>
+                                <arg>--add-modules java.xml.ws.annotation</arg>
+                                <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
+                                <arg>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</arg>
+                                <arg>--add-opens=java.base/java.nio=ALL-UNNAMED</arg>
+                                <arg>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</arg>
                             </compilerArgs>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>
+                                --add-modules java.xml.bind
+                                --add-modules java.xml.ws.annotation
+                                --add-opens=java.base/java.lang=ALL-UNNAMED
+                                --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+                                --add-opens=java.base/java.nio=ALL-UNNAMED
+                                --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                            </argLine>
                         </configuration>
                     </plugin>
                 </plugins>
